namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-hpa-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-hpa-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "HMPPS historical prisoner application - HPA"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/iis.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-auth-audit-registers"
    cloud-platform.justice.gov.uk/team-name: "hmpps-auth-audit-registers"
